# replayd

./: .gitignore  Cargo.toml  LICENSE  README.md
.forgejo/workflows/: build.yaml
assets/: dev.land.Replayd.desktop  style.css
src/: args.rs  audio.rs  db.rs  identifier.rs  lib.rs  listener.rs  log.rs  main.rs  prelude.rs  recorder.rs  search.rs  socket.rs  thumbnail.rs
src/db/: schema.rs
src/identifier/: hypr.rs
src/portals/: mod.rs  open_dialog.rs  open_uri.rs  shortcuts.rs
src/window/: clip.rs  dialog.rs  mod.rs  root.rs  tray.rs
src/window/dialog/: confirm_dialog.rs  error_dialog.rs  input_dialog.rs  properties_dialog.rs  select_dialog.rs
